[package]
authors = ["The Rust Project Developers"]
description = "Integer traits and functions"
documentation = "https://docs.rs/num-integer"
homepage = "https://github.com/rust-num/num-integer"
keywords = ["mathematics", "numerics"]
categories = ["algorithms", "science", "no-std"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-num/num-integer"
name = "num-integer"
version = "0.1.41"
readme = "README.md"
build = "build.rs"
exclude = ["/ci/*", "/.travis.yml", "/bors.toml", "/sgx/*"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies.num-traits]
branch = "veracruz"
git = "https://github.com/veracruz-project/num-traits.git"

[dependencies]
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
default = ["std"]
i128 = ["num-traits/i128"]
std = ["num-traits/std"]
mesalock_sgx = ["sgx_tstd", "i128", "num-traits/mesalock_sgx"]

[build-dependencies]
autocfg = "0.1.3"
